--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
+* {
+  overflow-y: hidden;
+  overflow-x: hidden;
+  font-family: Futura;
+  src: url('files/OPTIFuturaDemiBold.otf') format('opentype');
+  font-weight: bold;
+}
+
+body {
+  background-color: #371c43;
+}
+
 .App {
   text-align: center;
+  overflow-y: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.map-section {
+  width: 100%;
+  height: 100%;
+  background-image: './images/map.png';
+  overflow-y: hidden;
+  position: relative;
+  z-index: 2;
+}
+#map-section {
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.map {
+  width: 100%;
+  overflow-y: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.info-boxes {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 200px;
+  height: 250px;
+  background-color: #371c43;
+  border: 4px solid white;
+  border-radius: 25px;
   color: white;
+  padding: 10px;
+  z-index: 4;
 }
 
-.App-link {
-  color: #61dafb;
+#circus {
+  position: absolute;
+  top: 75%;
+  left: 8%;
+  width: 20%;
+  height: 20%;
+  z-index: 4;
+}
+#circus-info {
+  visibility: hidden;
+}
+#circus-popup {
+  z-index: 3;
+  position:absolute;
+  top: 30%;
+  left: -10%;
+  height: 100%;
+  visibility: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#waterpark {
+  position: absolute;
+  top: 47%;
+  left: 3%;
+  width: 30%;
+  height: 25%;
+  z-index: 4;
+}
+#waterpark-info {
+  visibility: hidden;
+}
+#waterpark-popup {
+  z-index: 3;
+  position:absolute;
+  top: 2%;
+  left: -7%;
+  height: 100%;
+  visibility: hidden;
+}
+
+#entrance {
+  position: absolute;
+  top: 58%;
+  left: 34%;
+  width: 30%;
+  height: 29%;
+  z-index: 4;
+}
+
+#actionland {
+  position: absolute;
+  top: 26%;
+  left: 60%;
+  width: 30%;
+  height: 31%;
+  z-index: 4;
+}
+#actionland-info {
+  visibility: hidden;
+}
+#actionland-popup {
+  z-index: 3;
+  position:absolute;
+  top: -10%;
+  left: 46%;
+  height: 100%;
+  visibility: hidden;
+}
+
+#zoo {
+  position: absolute;
+  top: 73%;
+  left: 67%;
+  width: 32%;
+  height: 22%;
+  z-index: 4;
+}
+#zoo-info {
+  visibility: hidden;
+}
+#zoo-popup {
+  z-index: 3;
+  position:absolute;
+  bottom: -23%;
+  left: 57%;
+  height: 90%;
+  visibility: hidden;
 }
